--- a/react-carousel-component/package.json
+++ b/react-carousel-component/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --mode=production",
     "watch": "webpack --watch --stats=minimal --mode=development --devtool=source-map"
   },
   "keywords": [],
